--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="actionbar_favourites">Favourites</string>
     <string name="actionbar_log">Travel Log</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_add_data">Download data</string>
     <string name="title_section3">Section 3</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section1">Section 1</string>
