--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_add_data">Download data</string>
     <string name="menu_onoff_online_mode">Switch online/offline mode</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_article">ArticleActivity</string>
 
 </resources>
