--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="sq">Foursquare</string>
     <string name="title_activity_travel_log_new_entry">TravelLogNewEntry</string>
 
+    <string name="travelpedia">Travelpedia</string>
+    <string name="practical_info">Practical info</string>
+    <string name="phrasebook">Phasebook</string>
+
 </resources>
