--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,21 @@
 <resources>
 
     <string name="app_name">TourMe</string>
-    <string name="actionbar_main">Home</string>
-    <string name="actionbar_map">Map</string>
-    <string name="actionbar_nearby">Nearby</string>
-    <string name="actionbar_favour">Favourites</string>
-    <string name="actionbar_log">Travel Log</string>
+    
+    <string name="main">Home</string>
+    <string name="map">Map</string>
+    <string name="nearby">Nearby</string>
+    <string name="favourites">Favourites</string>
+    <string name="travellog">Travel Log</string>
+    
     <string name="menu_settings">Settings</string>
+<!--     
+    <string name="actionbar_main">Home</string>
+    <string name="actionbar_map">Map</string>    
+    <string name="actionbar_nearby">Nearby</string>    
+    <string name="actionbar_favour">Favourites</string>
+    <string name="actionbar_log">Travel Log</string> -->
+    
     <string name="menu_add_data">Download data</string>
     <string name="menu_onoff_online_mode">Switch online/offline mode</string>
     <string name="hello_world">Hello world!</string>
@@ -15,7 +24,24 @@
     <string name="map_points_categories_title">Filter points</string>
     <string name="map_menu_filter">Filter points</string>
     <string name="map_menu_nearby">Nearby me</string>
+    
+    <string name="drawer_open">Open left drawer</string>
+    <string name="drawer_close">Close left drawer</string>
+    
+    <string-array name="drawer_items">
+        <item>@string/main</item>
+        <item>@string/travelpedia</item>
+        <item>@string/nearby</item>
+        <item>@string/map</item>
+        <item>@string/practical_info</item>        
+        <item>@string/favourites</item>
+        <item>@string/travellog</item>
+<!--         <item>Online mode</item>
+        <item>Plan new trip</item>
+        <item>Settings</item> -->
+	</string-array>
 
+    
     <string-array name="map_points_categories">
         <item>Sights</item>
         <item>ATMs</item>
