--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,21 +2,20 @@
 <resources>
 
     <string name="app_name">TourMe</string>
-    
     <string name="main">Home</string>
     <string name="map">Map</string>
     <string name="nearby">Nearby</string>
     <string name="favourites">Favourites</string>
     <string name="travellog">Travel Log</string>
-    
     <string name="menu_settings">Settings</string>
-<!--     
+    <!--
     <string name="actionbar_main">Home</string>
     <string name="actionbar_map">Map</string>    
     <string name="actionbar_nearby">Nearby</string>    
     <string name="actionbar_favour">Favourites</string>
-    <string name="actionbar_log">Travel Log</string> -->
-    
+    <string name="actionbar_log">Travel Log</string>
+    -->
+
     <string name="menu_add_data">Download data</string>
     <string name="menu_onoff_online_mode">DEL Switch online/offline mode</string>
     <string name="map_menu_onoff">Online/offline</string>
@@ -25,24 +24,23 @@
     <string name="map_points_categories_title">Filter points</string>
     <string name="map_menu_filter">Filter points</string>
     <string name="map_menu_nearby">Nearby me</string>
-    
     <string name="drawer_open">Open left drawer</string>
     <string name="drawer_close">Close left drawer</string>
-    
+
     <string-array name="drawer_items">
         <item>@string/main</item>
         <item>@string/travelpedia</item>
         <item>@string/nearby</item>
         <item>@string/map</item>
-        <item>@string/practical_info</item>        
+        <item>@string/practical_info</item>
         <item>@string/favourites</item>
         <item>@string/travellog</item>
-<!--         <item>Online mode</item>
+        <!--
+             <item>Online mode</item>
         <item>Plan new trip</item>
-        <item>Settings</item> -->
-	</string-array>
-
-    
+        <item>Settings</item>
+        -->
+    </string-array>
     <string-array name="map_points_categories">
         <item>Sights</item>
         <item>ATMs</item>
@@ -73,5 +71,16 @@
     <string name="phrasebook">Phasebook</string>
     <string name="title_activity_map_chooser">Choose a region to go</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_prepare">PrepareActivity</string>
+    
+    <!-- String for Welcome\prepare screen -->
+    <string name="prepare_1_welcome_text">TODO Welcome! TourMe is an application that helps you during your trip. To use it, you have to download
+        additional content (such as maps or practical info). Our aim is to provide absolutely offline experience so you no need to have and
+        internet connection over the trip. Now you are to pass a few steps to prepare to your first trip</string>
+	<string name="prepare_1_network">Your network connection is:</string>
+	<string name="available">OK</string>
+	<string name="unavailable">unavailable</string>
+	<string name="no_network">Oops! There is no network available. Please, enable your TODO and try again</string>
+	<string name="prepare_button_next">Next</string>
 
 </resources>
