Add welcome\prepare screen Cancel button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,12 +76,13 @@
     <!-- String for Welcome\prepare screen -->
     <string name="prepare_1_welcome_text">Welcome! TourMe is an application that helps you during your trip. It provides you map, points of interest, location info and useful
         practical info. To use the app, you have to download additional content. Our aim is to provide absolutely offline experience (may be you won\'t be able to use internet
-        over the trip).\n\nNow you are to pass a few steps to prepare to your first trip.</string>
+        over the trip).\n\nNow you are to pass a few steps to prepare to your first trip.\n\nYou can cancel downloading items and continue using online mode</string>
 	<string name="prepare_1_network">Your network connection is</string>
 	<string name="available">OK</string>
 	<string name="unavailable">unavailable</string>
 	<string name="no_network">Oops! There is no network available. Please, connect to a network and try again later</string>
 	<string name="prepare_button_next">Next</string>
+	<string name="prepare_button_reject">Cancel</string>
 	
 	<string name="prepare_2_text">Here you have to select regions you want to travel to. Tap on the map to place a mark at a region. To unselect, tap the marker.
 	    You can change the selection size with the seek bar in the bottom. If you are ready, press the \'Next\' button</string>
