--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,17 +31,17 @@
 
     <string-array name="drawer_items">
         <item>@string/main</item>
-        <item>@string/travelpedia</item>
+<!--         <item>@string/travelpedia</item> -->
         <item>@string/nearby</item>
         <item>@string/map</item>
         <item>@string/practical_info</item>
-        <item>@string/favourites</item>
+<!--         <item>@string/favourites</item> -->
         <item>@string/travellog</item>
     </string-array>
     
     <string-array name="drawer_items_service">
-		<item>Plan new trip??</item>
-		<item>@string/map_menu_on</item>
+		<item>Plan new trip</item>
+<!-- 		<item>@string/map_menu_on</item> -->
 		<item>@string/menu_settings</item>
     </string-array>
     
@@ -59,8 +59,8 @@
 
     <!-- Travel Log -->
     <string name="travellog_edit_title_placeholder">Title</string>
-    <string name="travellog_edit_title_text">Post text</string>
-    <string name="travellog_checkin">Check in</string>
+    <string name="travellog_edit_title_text">Impressions, thoughts, ideas</string>
+    <string name="travellog_checkin">Add location info</string>
     <string name="travellog_detect_location">Find location</string>
     <string name="travellog_share_options">Share options</string>
     <string name="travellog_info">You should log in to social networks to make check-ins</string>
