--- a/TourMe/src/main/res/values/strings.xml
+++ b/TourMe/src/main/res/values/strings.xml
@@ -109,5 +109,6 @@
     <string name="not_available">n/a</string>
 
 	<string name="me">Me</string>
+	<string name="travellog_no_text">Write your thougts about location, please</string>
 
 </resources>
