--- a/TourMe/src/main/res/values/strings.xml
+++ b/TourMe/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="nearby">Nearby</string>
     <string name="favourites">Favourites</string>
     <string name="travellog">Travel Log</string>
+    <string name="menu_about">About</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_settings">@string/menu_settings</string>
     <!--
@@ -31,20 +32,19 @@
 
     <string-array name="drawer_items">
         <item>@string/main</item>
-<!--         <item>@string/travelpedia</item> -->
+        <!-- <item>@string/travelpedia</item> -->
         <item>@string/nearby</item>
         <item>@string/map</item>
-       <!-- <item>@string/practical_info</item>-->
-<!--         <item>@string/favourites</item> -->
+        <!-- <item>@string/practical_info</item> -->
+        <!-- <item>@string/favourites</item> -->
         <item>@string/travellog</item>
     </string-array>
-    
     <string-array name="drawer_items_service">
-		<item>Plan new trip</item>
-<!-- 		<item>@string/map_menu_on</item> -->
-		<item>@string/menu_settings</item>
+
+        <!-- <item>Plan new trip</item> -->
+        <!-- <item>@string/map_menu_on</item> -->
+        <item>@string/menu_about</item>
     </string-array>
-    
     <string-array name="map_points_categories">
         <item>Sights</item>
         <item>ATMs</item>
@@ -90,10 +90,9 @@
     <string name="prepare_3_text">Almost finished. Wait till we download and unpack the items</string>
     <string name="prepare_3_finished">Download finished. Press \'Done\' to proceed. And have a nice trip!</string>
     <string name="prepare_button_done">Done</string>
-	<string name="prepare_1_map">Offline map</string>
-	<string name="prepare_1_poi">Offline POI</string>
-	<string name="prepare_1_info">Offline points info</string>
-
+    <string name="prepare_1_map">Offline map</string>
+    <string name="prepare_1_poi">Offline POI</string>
+    <string name="prepare_1_info">Offline points info</string>
 
     <!-- Preference screen -->
     <string name="info">Information and used sources</string>
@@ -103,19 +102,17 @@
     <string name="delete_cache_summary">Remove saved points, articles and map tiles for some trips</string>
     <string name="plan_new_trip">Plan a new trip</string>
     <string name="plan_new_trip_summary">Choose a region and download items</string>
-    
     <string name="menu_article_activity_show_on_map">Show on map</string>
-    
     <string name="not_available">n/a</string>
-
-	<string name="me">Me</string>
-	<string name="travellog_no_text">Write your thougts about location, please</string>
-
-	<string name="travellog_delete_confirmation">Delete this item?</string>
-
+    <string name="me">Me</string>
+    <string name="travellog_no_text">Write your thougts about location, please</string>
+    <string name="travellog_delete_confirmation">Delete this item?</string>
     <string name="population">Population:</string>
     <string name="phone_code">Phone code:</string>
     <string name="domain">Domain:</string>
     <string name="languages">Language:</string>
+    <string name="title_activity_about">About</string>
+
+    <string name="about_licenses">Open source licenses</string>
 
 </resources>
