Big improvements: new UI concept, bug fixes

--- a/TourMe/src/main/res/values/strings.xml
+++ b/TourMe/src/main/res/values/strings.xml
@@ -114,5 +114,7 @@
     <string name="title_activity_about">About</string>
 
     <string name="about_licenses">Open source licenses</string>
+    <string name="nearby_show_more">More...</string>
+    <string name="show_on_map">Show on map</string>
 
 </resources>
